--- a/Bilan.ipynb
+++ b/Bilan.ipynb
@@ -4,21 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SAE 15\n",
+    "# **SAE 15**\n",
     "\n",
+    "**Où en sont les expérimentations sur la 5G ?**\n",
     "\n",
-    "***Où en sont les expérimentations sur la 5G ?***\n",
-    "\n",
-    "*Toute les informations utilisées dans ce bilan proviennent d'un dataset portant sur les expérimentations menées actuellement en France par l'ARCEP autour de l'utilisation de la 5G.*"
+    "*Toutes les informations présentées dans ce bilan proviennent d'un dataset publié par l'ARCEP, répertoriant les expérimentations actuellement menées en France autour de l'utilisation de la 5G.*\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Tableau 1 :***\n",
+    "### **Tableau 1 : Implication régionale et entreprises les plus présentes**\n",
     "\n",
-    "Ce **tableau** nous permet de **voir que certaines régions sont plus ou moins impliqué** mais surtout quels sont **les entreprises les plus présentes** dans celles-ci. Certains noms comme __B-COM__, __Axians__ ou __Orange__ sont assez présent et ce **partout en France**."
+    "Ce **tableau** met en évidence le **niveau d'implication des différentes régions** et les **entreprises les plus actives** dans celles-ci. \n",
+    "\n",
+    "On remarque que des entreprises comme **B-COM**, **Axians**, ou **Orange** sont particulièrement présentes et actives, avec une couverture qui s'étend **à l'ensemble du territoire français**.\n"
    ]
   },
   {
@@ -83,9 +84,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Graphique 1 : Nombre d'expérimentations 5G par région\n",
+    "### **Graphique 1 : Nombre d'expérimentations 5G par région**\n",
     "\n",
-    "Sur ce graphique, on observe que l'Île-de-France et la Bretagne sont loin devant en terme d'expérimentations 5G. En effet, ces régions sont très engagées dans les expérimentations sur les thèmes des réseaux et des télécommunications. Le nombre d'entreprise placés en Île-de-France explique ce fort nombre de plus de 40 expérimentations et le haut chiffre de plus de 20 expérimentations en Bretagne s'explique. En effet, la Bretagne est le berceau des télécommunications, elle a d'ailleurs investi plus de 15millions d'euro entre 2018 et 2021. \n"
+    "Ce graphique met en évidence que **l'Île-de-France et la Bretagne se démarquent nettement** en matière d'**expérimentations 5G**. Ces deux régions affichent un engagement marqué dans les **domaines des réseaux et des télécommunications**.\n",
+    "\n",
+    "- **Île-de-France** : Avec plus de **40 expérimentations**, cette région se distingue en grande partie grâce au **nombre élevé d'entreprises** implantées sur son territoire.  \n",
+    "- **Bretagne** : Avec plus de **20 expérimentations**, la Bretagne conforte son statut de **berceau des télécommunications**. Elle a également investi plus de **15 millions d'euros** entre **2018 et 2021** pour renforcer cette position.\n",
+    "\n",
+    "Ces chiffres reflètent le dynamisme de ces régions dans le développement et l'expérimentation des technologies 5G.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Charger les données avec les paramètres spécifiques\n",
+    "file_path = 'experimentations_5G.csv'\n",
+    "data = pd.read_csv(file_path, encoding='cp1252', sep=';', quotechar='\"')\n",
+    "\n",
+    "# Vérifier les colonnes disponibles\n",
+    "print(data.columns)\n",
+    "\n",
+    "# Exemple : Compter le nombre d'expérimentations par région\n",
+    "experiments_by_region = data['Région'].value_counts()\n",
+    "\n",
+    "# Créer un histogramme\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "experiments_by_region.plot(kind='bar', color='red')\n",
+    "plt.title('Nombre d\\'expérimentations 5G par région')\n",
+    "plt.xlabel('Région')\n",
+    "plt.ylabel('Nombre d\\'expérimentations')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.grid(axis='y')\n",
+    "\n",
+    "# Afficher le graphique\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Graphique 3 : Technologies les plus utilisées par les expérimentateurs**\n",
+    "\n",
+    "De nombreuses entreprises réalisent des expérimentations, et il est possible d'observer une variation dans l'utilisation des différentes technologies. \n",
+    "\n",
+    "- **Mode de fonctionnement SA (Stand Alone)** : C'est la technologie la plus utilisée. Elle repose sur un réseau 5G qui dispose de ses propres installations, sans dépendance aux réseaux 4G existants.  \n",
+    "- **Duplexage temporel (mode TDD)** : Cette technologie permet la transmission bidirectionnelle des données sur un même canal de communication, en partageant le temps d'utilisation entre les transmissions montantes (uplink) et descendantes (downlink).  \n",
+    "- **Small cells** : Il s'agit de points d'accès à un réseau de télécommunications mobiles.\n",
+    "\n",
+    "À titre de comparaison, la technologie **Stand Alone** est utilisée plus de **deux fois** plus souvent que les expérimentations concernant les technologies **5G** et **6G**.\n"
    ]
   },
   {
