--- a/Bilan.ipynb
+++ b/Bilan.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Tableau 1 : Implication régionale et entreprises les plus présentes**\n"
+    "### **Tableau 1 : Implication régionale et acteurs les plus engagés**\n"
    ]
   },
   {
@@ -140,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ce graphique met en évidence que **l'Île-de-France et la Bretagne se démarquent nettement** en matière d'**expérimentations 5G**. Ces deux régions affichent un engagement marqué dans les **domaines des réseaux et des télécommunications**.\n",
+    "Ce graphique met en évidence que **l'Île-de-France se démarquent nettement** en matière d'**expérimentations 5G**. On remarque également **la Bretagne** en deuxième position. Ces deux régions affichent un engagement marqué dans les **domaines des réseaux et des télécommunications**.\n",
     "\n",
     "- **Île-de-France** : Avec plus de **40 expérimentations**, cette région se distingue en grande partie grâce au **nombre élevé d'entreprises** implantées sur son territoire.  \n",
     "- **Bretagne** : Avec plus de **20 expérimentations**, la Bretagne conforte son statut de **berceau des télécommunications**. Elle a également investi plus de **15 millions d'euros** entre **2018 et 2021** pour renforcer cette position.\n",
@@ -291,8 +291,13 @@
     "- **Duplexage temporel (mode TDD)** : Cette technologie permet la transmission bidirectionnelle des données sur un même canal de communication, en partageant le temps d'utilisation entre les transmissions montantes (uplink) et descendantes (downlink).  \n",
     "- **Small cells** : Il s'agit de points d'accès à un réseau de télécommunications mobiles.\n",
     "\n",
-    "À titre de comparaison, la technologie **Stand Alone** est utilisée plus de **deux fois** plus souvent que les expérimentations concernant les technologies **5G** et **6G**.\n"
+    "À titre de comparaison, la technologie **Stand Alone** est utilisée plus de **deux fois** plus souvent que les expérimentations concernant les technologies **5G** et **6G**, étant la technologie médiane de notre tableau. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
